0.6.0/alltypes/index.md


### All Types

| Name | Summary |
|---|---|
| [io.gladed.watchable.Change](../io.gladed.watchable/-change.md) | Describes a change to an object of type [T](../io.gladed.watchable/-change.md#T). |
| [kotlin.collections.Collection](../io.gladed.watchable/kotlin.collections.-collection/index.md) (extensions in package io.gladed.watchable) |  |
| [kotlinx.coroutines.CoroutineScope](../io.gladed.watchable/kotlinx.coroutines.-coroutine-scope/index.md) (extensions in package io.gladed.watchable) |  |
| [io.gladed.watchable.GroupChange](../io.gladed.watchable/-group-change/index.md) | A single change to a single watchable in a group. |
| [io.gladed.watchable.ListChange](../io.gladed.watchable/-list-change/index.md) | Describes a change to a [List](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin.collections/-list/index.html). |
| [kotlin.collections.Map](../io.gladed.watchable/kotlin.collections.-map/index.md) (extensions in package io.gladed.watchable) |  |
| [io.gladed.watchable.MapChange](../io.gladed.watchable/-map-change/index.md) | Describes a change to a [Map](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin.collections/-map/index.html). |
| [io.gladed.watchable.MutableWatchable](../io.gladed.watchable/-mutable-watchable/index.md) | A [Watchable](../io.gladed.watchable/-watchable/index.md) which may be mutated in the form of an [M](../io.gladed.watchable/-mutable-watchable/index.md#M) and bound to other [Watchable](../io.gladed.watchable/-watchable/index.md) sources. |
| [io.gladed.watchable.MutableWatchableBase](../io.gladed.watchable/-mutable-watchable-base/index.md) | Base for implementing a type that is watchable, mutable, and bindable. |
| [io.gladed.watchable.ReadOnlyWatchableList](../io.gladed.watchable/-read-only-watchable-list.md) | A [Watchable](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin.collections/-list/index.html) which may not be modified by the reference holder. |
| [io.gladed.watchable.ReadOnlyWatchableMap](../io.gladed.watchable/-read-only-watchable-map.md) | A [Watchable](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin.collections/-map/index.html) which may not be modified by the reference holder. |
| [io.gladed.watchable.ReadOnlyWatchableSet](../io.gladed.watchable/-read-only-watchable-set.md) | A [Watchable](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin.collections/-set/index.html) which may not be modified by the reference holder. |
| [io.gladed.watchable.ReadOnlyWatchableValue](../io.gladed.watchable/-read-only-watchable-value/index.md) | A [Watchable](../io.gladed.watchable/-watchable/index.md) value of type [T](../io.gladed.watchable/-read-only-watchable-value/index.md#T) which may not be replaced by the reference holder. |
| [io.gladed.watchable.SetChange](../io.gladed.watchable/-set-change/index.md) | Describes a change to a [Set](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin.collections/-set/index.html). |
| [io.gladed.watchable.ValueChange](../io.gladed.watchable/-value-change/index.md) | Describes the replacement of a value. |
| [io.gladed.watchable.Watchable](../io.gladed.watchable/-watchable/index.md) | Wraps type [T](../io.gladed.watchable/-watchable/index.md#T) so that it may be watched for changes of type [C](../io.gladed.watchable/-watchable/index.md#C). |
| [io.gladed.watchable.WatchableGroup](../io.gladed.watchable/-watchable-group/index.md) | A group of [Watchable](../io.gladed.watchable/-watchable/index.md) objects that can be watched for any change. |
| [io.gladed.watchable.WatchableList](../io.gladed.watchable/-watchable-list/index.md) | A [Watchable](../io.gladed.watchable/-watchable/index.md) wrapper for a [List](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin.collections/-list/index.html) which may also be modified or bound. Use [watchableListOf](../io.gladed.watchable/watchable-list-of.md) to create. |
| [io.gladed.watchable.WatchableMap](../io.gladed.watchable/-watchable-map/index.md) | A [Watchable](../io.gladed.watchable/-watchable/index.md) wrapper for a [Map](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin.collections/-map/index.html) which may also be modified or bound. Use [watchableMapOf](../io.gladed.watchable/watchable-map-of.md) to create. |
| [io.gladed.watchable.WatchableSet](../io.gladed.watchable/-watchable-set/index.md) | A [Watchable](../io.gladed.watchable/-watchable/index.md) wrapper for a [Set](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin.collections/-set/index.html) which may also be modified or bound. Use [watchableSetOf](../io.gladed.watchable/watchable-set-of.md) to create. |
| [io.gladed.watchable.WatchableValue](../io.gladed.watchable/-watchable-value/index.md) | A [Watchable](../io.gladed.watchable/-watchable/index.md) value of [T](../io.gladed.watchable/-watchable-value/index.md#T) which may also be replaced or bound. Use [watchableValueOf](../io.gladed.watchable/watchable-value-of.md) to create. |
